# pfc3_tesis

./: .gitignore  CONTRIBUTING.md  LLM_CONFIG_EXAMPLES.py  OPENROUTER_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART_LLM.md  README.md  config.yml  examples.py  pyproject.toml  requirements.txt  requirements_llm.txt  setup.py  setup.sh  validate_setup.py
experiments/: run_experiment.py
scripts/: run_full_sf110.sh  verify_setup.py
scripts/pipeline/: phase1_generate_baseline.py  phase2_llm_refinement.py  phase3_verification.py  run_pipeline.py
src/benchmark_handler/: loader.py  sf110_loader.py
src/evaluation/: metrics.py
src/gspo_optimizer/: optimizer.py
src/llm_agent/: agent.py
src/pfc3/core/: config.py  llm.py  loader.py  runner.py
src/pfc3/phases/: analysis.py  baseline.py  evaluation.py  refinement.py  verification.py
src/rl_env/: environment.py  reward.py
src/static_analyzer/: extractor.py
tests/: test_metrics.py
